# KRLibrary

./: .gitignore  CMakeLists.txt  LICENSE  OpenCppCoverage.conf  README.md  gcovr.cfg
.github/workflows/: cmake-multi-platform.yml  codecov.yml
cmake/: dependencies.cmake
include/krlibrary/: hello.hpp
packaging/: CMakeLists.txt  ProjectConfig.cmake.in
src/: CMakeLists.txt  hello.cpp  version.cpp.in  version.hpp.in
tests/: CMakeLists.txt  main.cpp
tests/cmake/: dependencies.cmake
